# c-homework

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-lint.yml
data/: input.csv
src/: CMakeLists.txt  csvprint.c  csvprint.h  main.c
src/tests/: testCsvparse.c  testCsvparse.h
